--- a/content/post/2015-07-23-r-rmarkdown.Rmd
+++ b/content/post/2015-07-23-r-rmarkdown.Rmd
@@ -43,7 +43,7 @@ pie(
 
 # 수식 처리 
 
-rmd 문서에서는 $\mathrm\LaTeX$을 쓸 수 있다. 이것이 아주 좋은 점이다. 약간만 손을 보면, tex 문서로 아예 뽑아낼 수 있다. 
+rmd 문서에서는 $\mathrm\LaTeX$을 쓸 수 있다. 이것이 아주 좋은 점이다. 게다가 rmarkdown은 header를 약간 손 보면, tex, beamer 기반의 pdf로 뽑아낼 수 있다. 여기에 약간 tricky하고 재미있는 대목이 있는데, 이건 다음에 기회가 되면 적어보도록 하겠다. 
   
 \begin{align}
 Z^i_j = \sum_{k=1}^n (x_k + y_k) 
