--- a/content/note/2017-09-19-Data-talks.Rmd
+++ b/content/note/2017-09-19-Data-talks.Rmd
@@ -12,7 +12,7 @@ knitr::opts_chunk$set(collapse = TRUE)
 
 # Prologue 
 
-개인적이든 직업적인 이유든 데이터를 볼 일이 많습니다. 인상적으로 본 데이터를 소개하는 섹션 노트 페이지를 한번 만들어 봅니다. 제가 여기저기서 본 것들을 가져옵니다. 독창성 같은 건 기대하지 마시기를... 
+개인적이든 직업적인 이유든 데이터를 볼 일이 많습니다. 인상적으로 본 데이터를 소개하는 꼭지를 한번 만들어 봅니다. 제가 여기저기서 본 것들을 가져옵니다. 독창성 같은 건 기대하지 마시기를... 아울러 업데이트도 기분 내킬 때!
 
 # Alchol vs Suicide 
 
@@ -42,7 +42,7 @@ knitr::opts_chunk$set(collapse = TRUE)
 
 # Baltimore Neighborhood Health 
 
-훌륭합니다! 제가 볼티모어 거주자가 아니라서 보는 감상이 덜합니다. 한국 도시들도 이런 거 만들어주세요! 
+훌륭합니다! 제가 볼티모어 거주자가 아니라서 보는 감상의 깊이가 다릅니다. 한국 도시들도 이런 거 만들어주세요! 
 
 [Baltimore Sun](http://data.baltimoresun.com/news/neighborhood-health/)
 
