--- a/content/note/2017-09-19-Data-talks.Rmd
+++ b/content/note/2017-09-19-Data-talks.Rmd
@@ -24,7 +24,7 @@ knitr::opts_chunk$set(collapse = TRUE)
 
 엄청난 비주얼라이제이션입니다. 일종의 동영상이라고 할 수 있을텐데, 공중보건의 주요한 사건과 죽음의 양상을 잘 이야기해주고 있습니다. 
 
-출처: [Guardian](https://www.theguardian.com/lifeandstyle/ng-interactive/2017/sep/18/how-death-has-changed-over-100-years-in-britain)
+[Guardian](https://www.theguardian.com/lifeandstyle/ng-interactive/2017/sep/18/how-death-has-changed-over-100-years-in-britain)
 
 # 2,000 Years of Economic History in One Chart 
 
@@ -32,7 +32,7 @@ knitr::opts_chunk$set(collapse = TRUE)
 
  ![](http://2oqz471sa19h3vbwa53m33yj.wpengine.netdna-cdn.com/wp-content/uploads/2017/09/share-of-gdp-history1070.jpg)
 
-출처: [Visual Capitalist](http://www.visualcapitalist.com/2000-years-economic-history-one-chart)
+[Visual Capitalist](http://www.visualcapitalist.com/2000-years-economic-history-one-chart)
 
 # Google Public Data 
 
