--- a/content/post/2017-09-19-blog-by-hugo.Rmd
+++ b/content/post/2017-09-19-blog-by-hugo.Rmd
@@ -79,7 +79,7 @@ git push
 
 여기까지 마치면 git의 `YOUR_GIT_REPO`로 로컬의 내용이 올라가게 된다. 여기까지 마치면 스태틱웹 제공을 위한 온라인의 숙주가 마련된 셈이다. 
 
-4. Netlify.com 
+# Netlify.com 
 
 숙주가 마련되었지만, 바로 hmtl을 클라이언트로 쏴주는 것은 아니다. github가 이걸 막고 있기 때문인데, 이 때문에 약간 배치(deploy) 과정이 필요하다. Xie는 [세가지 정도의 옵션](https://bookdown.org/yihui/blogdown/netlify.html) 제시하고 있으나, 그냥 닥치고 Netlify.com을 쓰는 편이 좋다. 
 
