--- a/content/post/2017-09-19-blog-by-hugo.Rmd
+++ b/content/post/2017-09-19-blog-by-hugo.Rmd
@@ -81,7 +81,7 @@ git push
 
 # Netlify.com 
 
-숙주가 마련되었지만, 바로 hmtl을 클라이언트로 쏴주는 것은 아니다. github가 이걸 막고 있기 때문인데, 이 때문에 약간 배치(deploy) 과정이 필요하다. Xie는 [세가지 정도의 옵션](https://bookdown.org/yihui/blogdown/netlify.html) 제시하고 있으나, 그냥 닥치고 Netlify.com을 쓰는 편이 좋다. 
+숙주가 마련되었지만, 바로 hmtl을 클라이언트로 쏴주는 것은 아니다. github가 이걸 막고 있기 때문인데, 이 때문에 약간 배치(deploy) 과정이 필요하다. Xie는 [세가지 정도의 옵션](https://bookdown.org/yihui/blogdown/netlify.html) 제시하고 있으나, 그냥 닥치고 [Netlify.com](https://www.netlify.com/)을 쓰는 편이 좋다. 이 서비스가 문을 닫았다면, 모를까 그게 아니라면 다른 서비스보다 이 용도로는 훨씬 편리하다. 
 
 1. 계정 만들고 자신의 온라인 git repo와 연결한다. 
 2. 나머지 설정은 아래 스크린 샷에 나온 것처럼 한다. 
