--- a/content/post/2017-10-02-project-template.Rmd
+++ b/content/post/2017-10-02-project-template.Rmd
@@ -12,25 +12,25 @@ knitr::opts_chunk$set(collapse = TRUE)
 
 # Prologue 
 
-코딩을 잘하는 것도 아니고 많이 하는 것도 아니고 많이 아는 것도 아니다. 하지만, 그 별 것 아닌 일도 하게 될 때 가장 고민스러운 대목은 
+코딩을 잘하는 것도 아니고 많이 하는 것도 아니고 그래서 많이 아는 것도 아니다. 하지만, 그 별 것 아닌 일도 하게 될 때 가장 고민스러운 대목은 다음의 두가지다.  
 
   1. 문제해결
   2. 작업의 연속성 
 
-두가지가 아닐까 한다. 아주 거대하고 어려운 문제가 아니라면 첫번째는 시간을 부으면 어떻게든 대충 해결한다(물론, 내 경우 능력이 부족해서 언제나 우아하게 해결된다는 것은 아니다). 내 경우 많이 하게 되는 고민은 첫번째를 하고는 대개는 잊게 된다는 것이다. 해결의 열기와 집중은 시간이 지나면 가시기 마련이다. 한마디로 '어제의 나'를 '오늘의 나'로 온전히 데려오지 못하는 것이다. 정말로 어제-오늘 간격이라면 크게 걱정할 필요가 없고 일주일 정도도 괜찮을 것 같다. 하지만, 3개월이라면? 6개월이라면? 더 안 좋은 경우도 있다. 프로젝트/연구가 길어서 한달 정도 걸린다고 하자. 달 끝에 달 초에 한 것을 소환한다. 기억이 잘 나지 않을 수 있다. 
+아주 거대하고 어려운 문제가 아니라면 첫번째는 시간을 부으면 어떻게든 해결은 된다. 물론, 내 경우 능력이 부족해서 언제나 우아하게 해결되지 않은 경우가 많기는 하지만... 해결 이후 많이 하게 되는 고민은 일정 시간이 지니고 잊게 된다는 슬픈 사실이다. 해결의 열기와 집중은 시간이 지나면 가시기 마련이다. 한마디로 '어제의 나'를 '오늘의 나'로 온전히 데려오지 못하는 것이다. 정말로 어제-오늘 간격이라면 크게 걱정할 필요가 없고 일주일 정도도 괜찮을 것 같다. 하지만, 3개월이라면? 6개월이라면? 더 안 좋은 경우도 있다. 프로젝트/연구가 길어서 한달 정도 걸린다고 하자. 달 끝에 달 초에 한 것을 소환하고 싶다! 하지만 안타깝게도 잘 기억이 잘 나지 않을지 모른다. 
 
 #문서화의 딜레마
 
-이럴 때 필요한 것이 문서화 작업이다. 문서화 작업은 꼭 협업에만 필요한 것은 아니다! 혼자 일할 때도 문서화 작업은 필요하다. 오히려 더 절실할 수도 있다. 그런데, 문서화 작업은 일종의 '무한회귀'의 문제를 낳을 때가 있다. 아마도 스터디 노트 같은 것은 만들어본 분이라면 정도의 차이는 있겠지만 비슷한 것은 느껴보았을 것이다. 어떤 코드/내용을 설명하기 위해 문서화를 했다고 하자. 그런데, 문서의 양과 질이 많아지면서, 이 문서에 대한 문서가 필요하게 된다. 메타 문서의 증식을 막기 쉽지 않다. 그 와중에 길을 잃게 십상이다.  
+이럴 때 필요한 것이 문서화다. 문서화 작업은 꼭 협업에만 필요한 것은 아니다. 혼자 일할 때도 문서화 는 필요하다. 오히려 더 절실히 필요할지도 모르겠다. 그런데, 문서화 작업은 일종의 '무한회귀'의 문제를 낳을 때가 있다. 아마도 스터디노트 같은 것은 만들어본 분이라면 정도의 차이는 있겠지만 비슷한 것을 느껴보았을 것이다. 어떤 코드/내용을 설명하기 위해 문서화를 했다고 하자. 그런데, 문서의 양과 종류가 많아지면서 이 문서에 대한 문서가 필요하게 된다. 이렇듯 많은 경우 '메타' 문서의 증식을 막기 쉽지 않고, 그 와중에 길을 잃기 십상이다.  
 
 # (개인적) 프로젝트 관리의 필요성 
 
-그래서 필요한 게 일종의 프로젝트 관리의 툴이다. 모두가 소통할 수 있는 방식으로 common knowledge를 틀잡는 것이다. 어떤 프로젝트인지 조직의 성격이 어떤 것인지에 따라서 여러가지 선택지들이 있고, 여기서 다룰 문제는 아니다. 개인적으로 R을 기반으로 프로젝트/연구를 한다고 생각해보자. 필요한 요소가 무엇일까? 대충 생각나는대로 적어보자면, 
+그래서 필요한 게 프로젝트 관리도구이다. 모두가 소통할 수 있는 방식으로 common knowledge를 정하고 이 틀 아래에서 작업하는 것이다. 어떤 프로젝트인지 조직의 성격이 어떤 것인지에 따라서 여러가지 선택지들이 있고, 이 문제는 여기서 다룰 문제는 아니 옆으로 치워두자. 일단 `R `을 기반으로 프로젝트/연구를 한다고 가정하겠다. 필요한 요소가 무엇일까? 대충 생각나는대로 적어보자면, 
 
-  1. 수집한 데이터의 보관 
-  2. 데이터 정리(munging; 발음은 "먼징"이다. 동시의 발음은 "먼지"다!)
-  3. 2의 과정에서 동원된 코드의 보관 및 해설 
-  4. 필요한 연구 주제를 탐구하기 위한 코드들 및 비주얼라이제이션 
+  1. 수집한 원 데이터의 보관 
+  2. 원 데이터의 정리(munging; 발음은 "먼징"이다. 동사의 발음은 "먼지"다!)
+  3. 2의 과정에서 동원된 코드의 보관 및 적절한 해설 
+  4. 필요한 연구 주제를 탐구하기 위한 코드들 및 비주얼라이제이션 결과물들 
   5. 연구 주제에 필요한 참고 문헌 
   6. 최종 리포트 
 
@@ -38,11 +38,11 @@ knitr::opts_chunk$set(collapse = TRUE)
 
 # Package `ProjectTemplate`
 
-나도 이런 요구를 어느 정도라도 만족시키는 툴 혹은 패키지가 있을까 싶었고 많이 찾았고 이것저것 많이 해봤다. 최근에서야 아주 괜찮은 R 패키지를 만나게 되었다. 
+나도 이런 요구를 어느 정도라도 만족시키는 툴 혹은 패키지가 있을까 싶었고 많이 찾았고 이것저것 많이 해보기도 했다. 최근에서야 아주 괜찮은 R 패키지를 만나게 되었다. 
 
 [Project Template](http://projecttemplate.net) 
 
-이 페키지를 개인 프로젝트 관리를 완벽하게 지원한다. 대략적인 작업의 흐름은 다음과 같다. 
+이 페키지를 (개인) 프로젝트 관리를 간단하고 비교적 완벽하게 지원한다. 패키지를 시작하는 흐름은 다음과 같다. 
 
   1. 패키지 설치 
   2. 프로젝트 생성 
@@ -68,10 +68,9 @@ create.project('letters')
 
 각 폴더의 역할에 대해서는 [여기](http://projecttemplate.net/architecture.html)를 참고하면 되겠다. 일단, 주요한 폴더에 대해서만 설명해보자. 
 
- * `config`: 프로젝트 설정을 다룬다. 예를 들어, 시작시 라이브러리를 로드할 것인지 등등을 세세하게 설정할 수 있다. 
- * `cache`: 작업 과정에서 활용되는 중간재(데이터, 코드등) 중에서 미리 로드될 내용들을 넣는다. 
- 
- * `munge`: 데이터 다루기에서 가장 중요한 데이터 정리 과정의 코드 및 문서를 넣는다. 
+  * `config`: 프로젝트 설정을 다룬다. 예를 들어, 시작시 라이브러리를 로드할 것인지 등등을 세세하게 설정할 수 있다. 
+  * `cache`: 작업 과정에서 활용되는 중간재(데이터, 코드등) 중에서 미리 로드될 내용들을 넣는다. 
+  * `munge`: 데이터 다루기에서 가장 중요한 데이터 정리 과정의 코드 및 문서를 넣는다. 
  
 대충 시험삼아 테스트 프로젝트를 시험해 해보았다. 아래와 같은 프로세스로 손쉽게 프로젝트를 생성하고 관리할 수 있었다. 
 
@@ -83,7 +82,7 @@ create.project('letters')
   6. 방향이 확실하게 정해지면 `src`를 통해 코드 작업을 진행한다. 
   7. 코드가 안정화되고 완성되고 흥미로운 결과가 발견되면 `reports`를 통해 작업한다. 
   
-이런 흐름으로 작업할 수 있겠다. 역시 상세한 내용은 앞서 링크한 프로젝트의 홈페이지를 읽어보시면 되겠다. 혹시 해당 구조가 너무 중후장대하다고 생각된다면, 패키지는 보다 경파한 세팅도 지원한다. 
+이런 흐름으로 작업할 수 있겠다. 역시 상세한 내용은 앞서 링크한 프로젝트의 홈페이지를 읽어보시면 되겠다. 혹시 해당 구조가 너무 중후장대하다고 생각된다면, 패키지는 앞서의 구조보다 경파한 세팅도 지원한다. 
 
 ```{r eval=FALSE, message=FALSE, warning=FALSE, include=TRUE, paged.print=FALSE}
 create.project(minimal = TRUE)
