--- a/content/post/2017-10-06-eventhorizon.Rmd
+++ b/content/post/2017-10-06-eventhorizon.Rmd
@@ -25,14 +25,14 @@ tags: [cinema]
 첫째, 만일 지옥이란게 있다면 우주 어딘가에 있지 않을까, 하는 대목이다. 그래서 누군가 지옥문을 연다면 우주의 시공간을 왜곡해서 그렇게 되지 않을까 하는 발상이다. 이건 "어벤저스"에서도 그래도 차용한 대목이다! 다만 예산상의 제약으로 이런 영화에서 '지옥'을 묘사할 수 없다. 그렇다면, 지옥을 건너온 "이벤트 호라이즌" 호를 통해서 지옥의 축소판을 보여줄 수 있지 않을까? 영화는 지옥에서 다시 빠져나온 이벤트 호라이즌 자체를 인간이라는 생명체를 끌어당기는 지옥의 전령으로 설정해두었다. 이게 폐선의 적막한 분위기와 제법 잘 어울린다. 
 둘째, 아직 특수효과가 본격화되기 이전이라서 상당히 허접한 시각적인 효과가 대부분이지만, CG와 실사를 결합해 만들어낸 일부 장면의 시각 효과 꽤 압도적이다. 지옥문의 차원을 여는 역할을 삼원이 엇갈려 돌아가는 '코어'와 여기까지 가기 위해 통과해야 하는 원형 회전방의 모습은 저예산 영화에서 비슷한 예를 찾기 힘들 만큼 시각적으로 뛰어나다. 
 
-![](https://images-na.ssl-images-amazon.com/images/G/01/digital/video/hero/Movies/1997/B005DNO76W_eventhorizon_UXPA1._V143581242_RI_SX940_.jpg){ width=70.2% }
+![](https://images-na.ssl-images-amazon.com/images/G/01/digital/video/hero/Movies/1997/B005DNO76W_eventhorizon_UXPA1._V143581242_RI_SX940_.jpg){ width=72% }
 
 -----
 
 ![](http://3.bp.blogspot.com/-Z-qTgArSWos/UyIjz1M1yGI/AAAAAAAAoz0/vxzpl2KUqLM/s1600/eventhorizon14.png) 
 -----
 
-지옥에 스스로 뛰어든 일종의 악마로 묘사된 이벤트 호라이즌의 설계자이나 과학자인 윌리엄 위어의 모습은 존 카펜터의 필생의 걸작 "In the Mouth of Darkness"의 모습을 그대로 가져왔다. 아마도 배우도 일부러 같은 배우로 선발한 것이 아닐까 싶을 정도로 비슷하다. 아마도 호러 영화의 팬이라면, 카펜터의 영화 혹은 헬레이저의 핀헤드의 모습을 어렵지 않게 떠올릴 수 있지 않을까?
+지옥에 스스로 뛰어든 일종의 악마로 묘사된 이벤트 호라이즌의 설계자이나 과학자인 윌리엄 위어의 모습은 존 카펜터의 필생의 걸작 "In the Mouth of Darkness"의 모습을 그대로 가져왔다. 아마도 배우도 일부러 같은 배우로 선발한 것이 아닐까 싶을 정도로 비슷하다. 아마도 호러 영화의 팬이라면, 카펜터의 이 영화 혹은 헬레이저의 핀헤드와의 유사성을 어렵지 않게 떠올릴 수 있지 않을까? 지옥의 사자로 분한 위어의 모습이 좀 과하게 그려진 면은 있지만, 시각적인 모습과 분위가 만은 나쁘지 않다. 
 
 # 길게 쓴 이유 
 
