--- a/content/post/2017-10-15-proof_blotto_gradiator.Rmd
+++ b/content/post/2017-10-15-proof_blotto_gradiator.Rmd
@@ -38,7 +38,7 @@ $$
 
 ## $i + j = k$
 
-$i$와 $j$는 1보다 크거나 같고, $k = 3, 4, \dotsc$ 라고 하자. Induction 원칙에 따라서 $k$일 때 '비존재'가 성립한다고 가정하자. 이때, $x$, $y+1$로 $G_Y$ 팀의 검투사가 한 명 늘었다고 하자. 적당한 표시자 $p$, $q$에 대해서 추가된 $G_Y$의 검투사 $q$가 $G_X$의 검투사 $p$와 대결한다고 하자. 추가된 검투사가 이길 경우는 양 팀의 검투사 조합은 다음과 같이 표기할 수 있다. 
+$i$와 $j$는 $1$보다 크거나 같고, $k = 3, 4, \dotsc$ 라고 하자. Induction 원칙에 따라서 $k$일 때 '비존재'가 성립한다고 가정하자. 이때, $x$, $y+1$로 $G_Y$ 팀의 검투사가 한 명 늘었다고 하자. 적당한 표시자 $p$, $q$에 대해서 추가된 $G_Y$의 검투사 $q$가 $G_X$의 검투사 $p$와 대결한다고 하자. 추가된 검투사가 이길 경우는 양 팀의 검투사 조합은 다음과 같이 표기할 수 있다. 
 
 \begin{align*}
 G_X & = \{ x_1, x_2, (x_p), \ldots x_i \} \\
