--- a/content/post/2017-10-15-proof_blotto_gradiator.Rmd
+++ b/content/post/2017-10-15-proof_blotto_gradiator.Rmd
@@ -10,7 +10,7 @@ categories: ['mathematics', 'game_theory']
 
 하임 샤피라가 쓴 재미 중심의 게임이론 책 ["n분의 1의 함정"](http://www.aladin.co.kr/shop/wproduct.aspx?ItemId=110477619)을 읽고 있다. 책에서 흥미롭게 변경된 Blotto game을 보게 되었다. 일단, [Blotto game](https://en.wikipedia.org/wiki/Blotto_game)에 대해서는 wiki링크를 참고하시면 되겠다. 샤피라가 제시한 변경된 이른바 "글레디에이터" 게임은 아래와 같다. 
 
-플레이어는 두 개의 검투사팀이다. 양 팀의 각 선수들은 일대일로 싸우고 각자가 지닌 전투력에 비례해서 승패가 결정된다. 이긴 쪽은 진 쪽의 전투력을 흡수해 다시 소속 팀으로 복귀하고, 진 쪽은 그대로 사라진다. 
+플레이어는 두 개의 검투사팀이다. 양 팀의 각 선수들은 일대일로 싸우고 각자가 지닌 전투력에 비례해서 승패가 결정된다. 이긴 쪽은 진 쪽의 전투력을 흡수해 다시 소속 팀으로 복귀하고, 진 쪽은 그대로 사라진다. 일대일 승부가 이어지고, 먼저 검투사를 소진하는 쪽이 패배한다. 
 
 승률을 높이기 위해서 검투사를 어떤 순서로 배치하는 것이 최적의 전략일까? 답부터 말하자면 최적의 전략은 없다. 팀 전투력의 합만 중요할 뿐, 출전 순서는 별로 중요하지 않다. 이와 비슷한 종류의 카드배틀 게임이 지닌 '당연한 문법'을 부정하는 것처럼 보인다. 책에서 샤피라는 말로 증명했다. 아마 간단한 사고 실험을 해봐도 쉽게 알 수 있을 것이다. 밤에 시간이 남아서 차근차근 생각해봤다. 
 
