--- a/content/post/2017-10-15-proof_blotto_gradiator.Rmd
+++ b/content/post/2017-10-15-proof_blotto_gradiator.Rmd
@@ -41,15 +41,15 @@ $$
 $i$와 $j$는 $1$보다 크거나 같고, $k = 3, 4, \dotsc$ 라고 하자. Induction 원칙에 따라서 $k$일 때 '비존재'가 성립한다고 가정하자. 이때, $x$, $y+1$로 $G_Y$ 팀의 검투사가 한 명 늘었다고 하자. 적당한 표시자 $p$, $q$에 대해서 추가된 $G_Y$의 검투사 $q$가 $G_X$의 검투사 $p$와 대결한다고 하자. 추가된 검투사가 이길 경우는 양 팀의 검투사 조합은 다음과 같이 표기할 수 있다. 
 
 \begin{align*}
-G_X & = \{ x_1, x_2, (x_p), \ldots x_i \} \\
-G_Y & = \{ y_1, y_2, y_q + x_p, \ldots,y_j \}
+G_X & = \{ x_1, x_2, \dotsc, (x_p), \dotsc, x_i \} \\
+G_Y & = \{ y_1, y_2, \dotsc, y_q + x_p, \dotsc, y_j \}
 \end{align*}
 
 반대로 추가된 검투사가 질 경우는 다음과 같다. 
 
 \begin{align*}
-G_X & = \{ x_1, x_2, x_p + y_q, \ldots x_i \} \\
-G_Y & = \{ y_1, y_2, (y_q), \ldots,y_j \}
+G_X & = \{ x_1, x_2, \dotsc, x_p + y_q, \dotsc, x_i \} \\
+G_Y & = \{ y_1, y_2, \dotsc, (y_q), \dotsc, y_j \}
 \end{align*}
 
 여기서 $( )$는 해당 검투사가 자신의 팀에서 제외됨을 의미한다. 이렇게 한 플레이어가 제외될 경우는 다시 $i + j = k$가 된다. 따라서 induction 원칙에 따라서 승부는 각 팀의 전투력의 합에 의해서만 결정된다. 이를 종합하면, $G_X$가 승리할 확률은 아래와 같이 계산될 수 있다. 
