--- a/content/note/2017-10-18-2-AMS-dots.Rmd
+++ b/content/note/2017-10-18-2-AMS-dots.Rmd
@@ -11,7 +11,7 @@ categories: ['typesetting', 'math_symbol', 'ams']
 
 $\mathrm \LaTeX$으로 조판하는 분들에게는 때때로 아리송한 사항들이 몇 개 있다. 작정하고 알아보기에는 사소하고 그렇다고 넘어가기엔 찜찜한, 뭐 그런 것들이다. 요즘은 무늬나마 공부하는 사람일 때 만큼 $\mathrm \LaTeX$을 쓰지 않는다. 그래도 가끔 쓰기는 해서일까? 이런 사소한 내용에 더 큰 궁금증을 느낄 때가 많다.  
 
-문득, `\cdots`($\cdots$)과 `\ldots`($\ldots$)은 어떻게 다르지, 라는 질문이 떠올랐다. 분명, 수학 기호의 일부이기 때문에 다르기는 다를텐데 말이다. 역시 달랐다! 천조국수학회(AMS)에서 관리하는 수학 조판 패키지인 `amsmath` 패키지의 [이용자 매뉴얼](http://www.tug.org/teTeX/tetex-texmfdist/doc/latex/amsmath/amsldoc.pdf)에 따르면 '점 세개'로 표기되는 기호들이 명령어 차원에서 구분되어 있다. 이 매뉴얼은 현재 2.0이 최신 버전이고 만들어진 날짜는 2002년 2월 25일이다... (그간 이 매뉴얼을 꼼꼼하게 볼 생각을 하지 않았다니 ㅠㅠ)
+문득, `\cdots`($\cdots$)과 `\ldots`($\ldots$)은 어떻게 다르지, 라는 질문이 떠올랐다. 분명, 수학 기호의 일부이기 때문에 다르기는 다를텐데 말이다. 천조국수학회(AMS)에서 관리하는 수학 조판 패키지인 `amsmath` 패키지의 [이용자 매뉴얼](http://www.tug.org/teTeX/tetex-texmfdist/doc/latex/amsmath/amsldoc.pdf)에 따르면 '점 세개'로 표기되는 기호들은 명령어 차원에서 구분된다. 즉, 외견상 같은 모양을 하고 있더라도 구분해서 쓰라는 취지인 셈이다. AMS 패키지 매뉴얼은 현재 2.0이 최신 버전이고 만들어진 날짜는 2002년 2월 25일이다... (그간 이 매뉴얼을 꼼꼼하게 볼 생각을 하지 않았다니 ㅠㅠ)
 
 # According to AMS package guide 
 
