MOD: fix categories & tag

--- a/content/note/2017-09-19-Data-talks.Rmd
+++ b/content/note/2017-09-19-Data-talks.Rmd
@@ -2,8 +2,8 @@
 title: "Data Talk"
 author: Junsok Huhh
 date: 2017-09-19
-categories: ["R", "Data", "Visualization"]
-tags: ["Google", "China"]
+tags: ["china","streaming", "alchol"]
+categories:  ["data-analysis", "visualization"]
 ---
   
 ```{r setup, include=FALSE}
