--- a/content/note/2017-10-18-2-AMS-dots.Rmd
+++ b/content/note/2017-10-18-2-AMS-dots.Rmd
@@ -2,8 +2,8 @@
 title: "All dots are not created same..." 
 author: "Junsok Huhh"
 date: 2017-10-18
-tags: ['LaTeX']
-categories: ['typesetting', 'math_symbol', 'ams']
+tags: ['LaTeX', 'LaTeX-ams']
+categories: ['math', 'documentation']
 
 ---
 
