--- a/content/note/2017-11-15-magrittr.Rmd
+++ b/content/note/2017-11-15-magrittr.Rmd
@@ -2,8 +2,8 @@
 title: "Magrittr - Ceci n'est pas un pipe."
 author: "Junsok Huhh"
 date: 2017-11-15
-tags: ['pipe', 'magritt']
-categories: ['R'] 
+tags: ['pipe', 'magrittr', 'R', 'R-pacakge']
+categories: ['coding'] 
 ---
 
 <style>
