--- a/content/note/2017-11-16-myfont.Rmd
+++ b/content/note/2017-11-16-myfont.Rmd
@@ -2,8 +2,8 @@
 title: "Use your font"
 author: "Junsok Huhh"
 date: 2017-11-16
-tags: ['font', 'showtext']
-categories: ['R'] 
+tags: ['font', 'showtext', 'R', 'R-package']
+categories: ['coding'] 
 ---
 
 <style>
