--- a/content/post/2017-10-15-proof_blotto_gradiator.Rmd
+++ b/content/post/2017-10-15-proof_blotto_gradiator.Rmd
@@ -3,7 +3,7 @@ title: "Proof for 'Blotto-Gradiator' game"
 author: "Junsok Huhh"
 date: 2017-10-18
 tags: ['proof']
-categories: ['mathematics', 'game_theory']
+categories: ['math', 'game-theory']
 ---
 
 # Blotto 'Gradiator' Game 
