--- a/content/post/2017-10-30-modelr01.Rmd
+++ b/content/post/2017-10-30-modelr01.Rmd
@@ -2,8 +2,8 @@
 title: "Regression Modelling with Tidyverse"
 author: "Junsok Huhh"
 date: 2017-10-30
-tags: ['modelling', 'regression']
-categories: ['R'] 
+tags: ['modelling', 'regression', 'R', 'R-package']
+categories: ['coding'] 
 ---
 
 `tidyverse`로 묶인 패키지 군에 대한 찬미는 뭐 이제... 이번 포스팅에서는 `modelr`, `broom`, `purrr`을 통해서 '유연하게'(MB말투로는 "스마아~트하게") 회귀분석하는 방법을 간략하게 끄적이겠다. 
