--- a/public/cv/short.Rmd
+++ b/public/cv/short.Rmd
@@ -1,7 +1,7 @@
 ---
 output: 
   html_document: 
-    css: styles_cv.css
+    css: style.css
 # pdf_document:
 #  latex_engine: pdflatex
 #  template: ~/Dropbox/miscelanea/svm-r-markdown-templates/svm-latex-cv.tex
