--- a/public/cv/short_old.Rmd
+++ b/public/cv/short_old.Rmd
@@ -1,9 +1,30 @@
 ---
-title: "Short CV"
-author: "Junsok Huhh"
-date: 2017-11-20
-tags: ['Personal']
-categories: ['cv'] 
+output: 
+  html_document: 
+    css: style.css
+# pdf_document:
+#  latex_engine: pdflatex
+#  template: ~/Dropbox/miscelanea/svm-r-markdown-templates/svm-latex-cv.tex
+# geometry: margin=1in
+
+title: "Jun Sok Huhh"
+
+# #jobtitle: "Chief Brewer, Arthur Guinness & Son"
+# #address: "Guinness Brewery · Park Royal · London NW10 7RR, UK"
+# fontawesome: yes
+# email: guinness@consumer-care.net
+# # github: svmiller
+# phone: "+353 1 408 4800"
+# web: guinness.com
+# updated: no
+# 
+# keywords: R Markdown, academic CV, template
+# 
+# fontfamily: mathpazo
+# fontfamilyoptions: sc, osf
+# fontsize: 11pt
+# linkcolor: blue
+# urlcolor: blue
 ---
 
 ```{r setup, include=FALSE}
