--- a/public/cv/short.Rmd
+++ b/public/cv/short.Rmd
@@ -5,6 +5,9 @@ date: 2017-11-20
 tags: ['Personal']
 categories: ['cv'] 
 ---
+<head>
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
 
 <a class="btn-cta-freequote" href="#">Compute <i class="fa fa-calculator"></i></a>
 
