TEST: footer_custom.html

--- a/logs.Rmd
+++ b/logs.Rmd
@@ -5,3 +5,44 @@ author: "Jun Sok Huhh"
 
 # 2017-11-20 
 
+오늘에서야 Hugo의 작동 원리에 대해서 대체로 파악했다. 원리를 자세히 적진 않고 요약으로 적어두겠다. 
+
+  1. `theme/xmin-hugo` 테마의 기본이 되는 내용을 갖고 있다. 아울러, 이곳을 고치면 테마 전체가 영구적으로 변경된다. 일단 오늘 손본 내용은 아래의 두 항목이다. 
+    * `layout` - `footer.html`, `header.html`, `footer_custom.html`, `header_custom.html`
+      * `layout`의 내용은 footer가 footer_custom을 header가 header_custom을 읽어들이도록 되어 있다. 
+    * `static` - css 관련 두 개의 항목 
+
+이 곳을 고친 후, blogdown 패키지의 `blogdown::serve_site()`를 하게 되면 변경된 내용이 `public`으로 반영된다. 
+  
+  2. `content` 디렉의 내용은 이용자가 글을 고친 후 반영하도록 만드는 것이다. 여기는 되도록 글을 고친 후 반영되도록만 하자. 
+  
+## Theme elements customized 
+
+### `header_custom.html`
+
+  * 코드 하일라이터 darcula.min.css 포팅 
+  * font-awesome.min.css 
+  
+### `footer.html` 
+
+  * barefoot.min
+  
+### `footer_custom.html`
+
+  * math-code, mathjax 
+  * center-img.js 
+  * highlight.js 관련 
+
+## cv 페이지 
+
+기본 개념은 외부에서 만든 후 `public\cv` 폴더 안에 넣어주는 형태다. 
+
+  1. 일단, `index.html`은 앞서 페이지들의 index 페이지를 복사해서 넣은 후, cv는 short.hmtl의 형태로 완성된 제품을 넣어준다. 
+  2. 완성하기 전 rmd 파일의 경우는 `admin\cv` 안에 있다. 
+  
+  
+  
+
+
+
+
