--- a/public/cv/short.Rmd
+++ b/public/cv/short.Rmd
@@ -52,7 +52,7 @@ Jun Sok Huhh. 2006. *Business of Fun–Economics of computer games industry*. Ch
 
 ## Journal Articles
 
-Jun Sok Huhh and Jeong Wook Byun. 2017. "North Korea’s Nuclear Weapon Development and South Korea’s Strategic Reaction: A Signaling Game Approach." *Ehwa Journal of Social Sciences* 33(1): 107--142 [Korean language]
+Jun Sok Huhh and Jeong Wook Byun. 2017. "North Korea’s Nuclear Weapon Development and South Korea’s Strategic Reaction: A Signaling Game Approach." *Ehwa Journal of Social Sciences* 33(1): 107--142. [Korean language]
 
 Jun Sok Huhh and Jeong Wook Byun. 2014. "Hyperbolic Discounting and the Effect of Handset Subsidy Regulation in Mobile Telephony Service Market." *Telecommunucations Review* 24(4):566--576. [Korean language]
 
