--- a/public/cv/long.Rmd
+++ b/public/cv/long.Rmd
@@ -19,24 +19,41 @@ Team Leader, R&I Team </br>
 
 ******
 
+# Education
 
-# Employment
+*Seoul National University*, Ph.D. School of Economics 2010 </br>
+Thesis: Three Essays on Evolutionary Game Theory and Its Economic Applications 
+
+*Seoul National University*, M.A. School of Economics 1997 </br>
+Thesis: An Critical Inquiry on New Institutional Economics  
+
+*Seoul National University*, B.A. School of Economics 1995
+
+# Employment (Industry)
 
 *NCSOFT*, Team Leader (Seongnam Gyeonggi $\cdot$ South Korea) 2014--present 
 
-*KISDI*, Senior Researcher (Jinchun Chungchungbuk $\cdot$ South Korea) 2013--2014 
+*KISDI*\*, Senior Researcher (Jinchun Chungchungbuk $\cdot$ South Korea) 2013--2014 </br> 
+* Korea Information Society Development Institute
 
 *FourThirtyThree*, Data Anlysist (Seoul $\cdot$ South Korea) 2012--2013
 
-*Seoul National University*, Postdoc. School of Economics (Seoul $\cdot$ South Korea) 2011--2012
+# Employment (Academy)
 
-# Education
+*Seoul National University*, Postdoc., School of Economics (Seoul $\cdot$ South Korea) 2011--2012
 
-*Seoul National University*, Ph.D. School of Economics 2010
+*Seoul National University*, Lecturer, Information and Multimedia Culture, 2007 -- 2013 </br>
+Lecture: "Economics and Management of Cotent", "Serious Gamming"
 
-*Seoul National University*, M.A. School of Economics 1997 
+*Kyunghee University*, Lecturer, Humanitas College, 2013 -- 2013 </br>
+Lecture: "Game Theory, Evolution and Cooperation"
 
-*Seoul National University*, B.A. School of Economics 1995
+*Seoul National University*, Lecturer, Graduate School of Convergence Science and Technology, 2011 </br>
+Lecture: "Understanding Digital Games"
+
+*Seoul National University*, Lecturer, School of Economics, 2004--2010 
+Lecture: "Principle of Economics"", "Microeconomic Theory"
+
 
 # Publications
 
@@ -69,6 +86,36 @@ Jun Sok Huhh. 1999. "Finding the Alternative in-between Market and Capitalism: T
 Jun Sok Huhh. 1998. "On Theoretical Foundation of New Institutionalist Economics : ‘Power’ vs, ‘Efficiency’." *Review of Social Economics* 11. [Korean language]
 
 Jun Sok Huhh and Jung-Kyu Choi. 1998. "Review of Radical Institutionalist economics." *Trend and Perspective* 37. [Korean language]
+
+# Research Interests 
+
+## Graduate Work 
+
+In my doctoral thesis, methods of evolutionary game theory and its dynamics are applied to some economic theories. This consists of three independently-themed papers. Each title is 
+  a. role of opportunistic punishment in the evolution of cooperation cooperation
+  a. Evolutionary dynamics on social ties
+  a. Replicator dynamics of population with players’ differing abilities.
+
+## Industry Works
+
+In NCSOFT, my tasks includes designing ’(online) game’ economy, data analysis on log data of online games, and planning corpoerate strategies with analysis on economic situation. In KISDI, I worked mainly on competition policy for telecommunication business. My main topics were tariff policy of mobile communications and antitrust issues of Korean online search engine.
+
+## Other Topics 
+
+Another parts of my research focuses on online games and their economic impacts on society. Most of my works are based on the specific context of Korean online gaming including effects of RMT (Real-Money Trading) on online gaming
+service and individual gamers. Currently progressing researches are:
+  
+  a. Relationship among game design, players’ behaviors and RMT
+  a. User data analysis of Korean online/mobile gaming
+
+# Honors 
+
+Best Dissertation of The College of Social Sciences of Seoul National University of the Year, 2010
+
+Best Paper for Young Economists Competition hosted by Korean Economic Association(KEA) at 14th International Conference, 2010
+
+*Il-ju* Foundation Graduate Scholarship, 1997--1999
+
 
 # Technical Skills 
 
